dhcpcd-3.1.6
--skiproutes has been added for no fork users so that we know if we
can delete the route at a later date.
Many thanks to Michael Durrant for testing the below changes.
Compile and work on OSX/Darwin.
If we have no fork then we re-exec ourselves with --daemonised.
Improved the build system so we automatically detect if we need
librt or libresolv and if fork() works or not.
Move back to using librt for clock_gettime on Linux systems.

dhcpcd-3.1.5
Fix the flushing of addresses on BSD systems.
Rework get_time so that we don't link to librt on Linux.
Thanks to regenrecht for reporting the below three overflows:-
 Fix a potential buffer overflow in hwaddr_ntoa if length > 42.
 Fix a potential heap overflow in decode_CSR when CIDR > 32.
 Fix a potential heap overflow in decode_sipservers when length is 1.
-L actually doesn't do IPv4LL as advertised.

dhcpcd-3.1.4
Ensure ARP checking times out when there is a flood.
Add -x option to quit without releasing the lease.

dhcpcd-3.1.3
Fix link routes which broke in 3.1.2.

dhcpcd-3.1.2
Use a generic route logger.
Fix static route netmask calculation and applicaton.
Use --nodeps when restarting services.
Simply CIDR calculation, thanks to Francois-Xavier Le Bail.
Don't free the dhcp object on RENEW (fixes a segfault).

dhcpcd-3.1.1
Fix segfault in arp code that some users had.
Remove getifaddrs code and instead just use ioctls so we don't break
platforms without getifaddrs as often.

dhcpcd-3.1.0
Add new socket code to try and support InfiniBand better.
Support RFC 3361 SIP Servers.
We now do ARP checking by default as recommended by RFC 2131.
Add RFC 3927 (aka IPV4LL aka APIPA) support by default.
Suport DHCP option (52) overload.
Added -T test option. This just sends a DHCP_DISCOVER message and then
prints the configuration data to stdout - we don't request a lease,
configure the interface or write the info file.
Fix adding of routes on the BSDs.
ROOTPATH should work correctly again, thanks to danhien.